@@ -1,3 +1,8 @@
+2013-12-16 v1.0.2.4:
+	* gen.c:	[BUG] Fixed kpi file format error.
+	* uld.c:	[FUN] Try to upload other kpi files continually if one uploaded
+				failed.
+
 2013-12-13 v1.0.1.3:
 	* main.c:	Optimize delay mechanism.
 
